footer fix, no longer stuck in the middle but not aligned correctly and gap at bottom and left

--- a/app/_components/Footer.css
+++ b/app/_components/Footer.css
@@ -1,7 +1,4 @@
 footer {
-  position: absolute;
-  left: 0;
-  bottom: 0;
   width: 100%;
   background-color: var(--navbar-colour);
   color: var(--main-font-colour);
@@ -18,7 +15,6 @@ footer ul {
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  
   padding: 0;
   background-color: var(--navbar-colour);
   width: 100%;
@@ -40,15 +36,11 @@ footer ul {
   width: 100%;
 }
 
-footer li {
-  float: right;
-}
-
 .footerLink {
   background-color: var(--navbar-colour);
   color: var(--main-font-color);
   display: block;
-  padding: 14px 16px;
+  padding: 18px 20px;
   text-decoration: none;
 }
 
