--- a/app/_components/Navbar.css
+++ b/app/_components/Navbar.css
@@ -30,6 +30,7 @@
   text-align: center;
   top: 0;
   width: 100%;
+  z-index: 1;
 }
 
 .navLi {
