--- a/app/globals.css
+++ b/app/globals.css
@@ -4,12 +4,12 @@
   --navbar-colour: #435946;
 }
 
-* {
+body {
   background-color: var(--main-bg-color);
   color: var(--main-font-color);
   font-family: "Optima";
+  margin-top: 70px;
+  min-height: 100vh;
+  width: 100vw;
 }
 
-body {
-  margin-top: 70px;
-}
